--- a/box-nav-demo/index.html
+++ b/box-nav-demo/index.html
@@ -61,16 +61,16 @@
   <a href="https://css-tricks.com"><div class="mbox4">
       CSS-Tricks
     </div></a>
-  <div class="mbox4">
+  <div class="mbox4 hide">
       box3
   </div>
-  <div class="mbox4">
+  <div class="mbox4 hide">
       box3
   </div>
-  <div class="mbox4">
+  <div class="mbox4 hide">
       box3
   </div>
-  <div class="mbox4">
+  <div class="mbox4 hide">
       box3
   </div>
   </div>
